fixed my code for correct alignment of icons

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,9 +6,9 @@
 
 .nav {
     grid-row: 3 / 4;
-    grid-column: 1 span 4;
-    display: flex;
-    flex-direction: row;
+    grid-column: 1 / span 4;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     justify-items: center;
     align-items: center;
 }
